fix: improve curl command for downloading files with silent and show-error options

--- a/common/download-file/action.yml
+++ b/common/download-file/action.yml
@@ -13,4 +13,4 @@ runs:
     - name: Download file
       shell: bash
       run: |
-        curl -L -o ${{ inputs.destination }} ${{ inputs.url }}
+        curl -LsS -o ${{ inputs.destination }} ${{ inputs.url }}
