--- a/docker/promote/action.yml
+++ b/docker/promote/action.yml
@@ -1,10 +1,6 @@
 name: Docker Image Promote
 description: Promote Docker Image
 inputs:
-  registry:
-    description: Docker Registry
-    required: false
-    default: 'hub.docker.com'
   repository:
     description: Docker Repository
     required: true
@@ -28,38 +24,38 @@ runs:
     - name: Docker login
       shell: bash
       id: login
-      run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD ${{ inputs.registry }}
+      run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
     
     - name: Docker pull
       id: pull
       shell: bash
       run: |
-        docker pull ${{ inputs.registry }}/${{ inputs.repository }}:${{ inputs.old_tag }}
+        docker pull ${{ inputs.repository }}:${{ inputs.old_tag }}
 
     - name: Docker tag
       shell: bash
       id: tag
       run: |
-        docker tag ${{ inputs.registry }}/${{ inputs.repository }}:${{ inputs.old_tag }} ${{ inputs.registry }}/${{ inputs.repository }}:${{ inputs.promote_tag }}
+        docker tag ${{ inputs.repository }}:${{ inputs.old_tag }} ${{ inputs.repository }}:${{ inputs.promote_tag }}
         
         if [ "${{ inputs.promote_latest }}" = "true" ]; then
-          docker tag ${{ inputs.registry }}/${{ inputs.repository }}:${{ inputs.old_tag }} ${{ inputs.registry }}/${{ inputs.repository }}:${{ inputs.promote_custom_latest }}
+          docker tag ${{ inputs.repository }}:${{ inputs.old_tag }} ${{ inputs.repository }}:${{ inputs.promote_custom_latest }}
         fi
 
     - name: Docker remove old tag
       shell: bash
       if: steps.pull.conclusion == 'success'
       run: |
-        docker rmi ${{ inputs.registry }}/${{ inputs.repository }}:${{ inputs.old_tag }}
+        docker rmi ${{ inputs.repository }}:${{ inputs.old_tag }}
     
     - name: Docker remove new tags
       shell: bash
       if: steps.tag.conclusion == 'success'
       run: |
-        docker rmi ${{ inputs.registry }}/${{ inputs.repository }}:${{ inputs.promote_tag }} || true
-        docker rmi ${{ inputs.registry }}/${{ inputs.repository }}:${{ inputs.promote_custom_latest }} || true
+        docker rmi ${{ inputs.repository }}:${{ inputs.promote_tag }} || true
+        docker rmi ${{ inputs.repository }}:${{ inputs.promote_custom_latest }} || true
     
     - name: Docker logout
       shell: bash
       if: steps.login.conclusion == 'success'
-      run: docker logout ${{ inputs.registry }}
+      run: docker logout
