--- a/ansible/run-playbook/action.yml
+++ b/ansible/run-playbook/action.yml
@@ -36,7 +36,7 @@ runs:
       id: vault
       if: inputs.with_vault == 'true'
       run: |
-        echo "${{ secrets.VAULT_DECRYPT_TOKEN }}" > .vault_password
+        echo "$VAULT_DECRYPT_TOKEN" > .vault_password
         chmod 0600 .vault_password || true
     
     - name: Run Ansible Playbook
