--- a/common/versioning/action.yml
+++ b/common/versioning/action.yml
@@ -9,7 +9,7 @@ runs:
   using: 'composite'
   steps:
     - name: Get release version
-      if: github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && github.base_ref == 'main')
+      if: github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && github.base_ref == 'refs/heads/main')
       shell: bash
       run: |
         echo "version=$(jq -r .version ${{ inputs.version_file }})-${{ github.run_number }}" > $GITHUB_OUTPUT
@@ -17,10 +17,10 @@ runs:
       if: startsWith(github.ref, 'refs/heads/feature/')
       shell: bash
       run: |
-        echo "version=$(jq -r .version ${{ inputs.version_file }}-FEA.${{ github.run_number }})" > $GITHUB_OUTPUT
+        echo "version=FEA.${{ github.run_number }}" > $GITHUB_OUTPUT
     - name: Get bugfix version
       if: startsWith(github.ref, 'refs/heads/bugfix/')
       shell: bash
       run: |
-        echo "version=$(jq -r .version ${{ inputs.version_file }}-BUG.${{ github.run_number }})" > $GITHUB_OUTPUT
+        echo "version=BUG.${{ github.run_number }}" > $GITHUB_OUTPUT
     
