--- a/common/versioning/action.yml
+++ b/common/versioning/action.yml
@@ -12,15 +12,15 @@ runs:
       if: github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && github.base_ref == 'refs/heads/main')
       shell: bash
       run: |
-        echo "version=$(jq -r .version ${{ inputs.version_file }})-${{ github.run_number }}" > $GITHUB_OUTPUT
+        echo "version=$(jq -r .version ${{ inputs.version_file }})-${{ github.run_number }}" >> $GITHUB_OUTPUT
     - name: Get feature version
       if: startsWith(github.ref, 'refs/heads/feature/')
       shell: bash
       run: |
-        echo "version=FEA.${{ github.run_number }}" > $GITHUB_OUTPUT
+        echo "version=FEA.${{ github.run_number }}" >> $GITHUB_OUTPUT
     - name: Get bugfix version
       if: startsWith(github.ref, 'refs/heads/bugfix/')
       shell: bash
       run: |
-        echo "version=BUG.${{ github.run_number }}" > $GITHUB_OUTPUT
+        echo "version=BUG.${{ github.run_number }}" >> $GITHUB_OUTPUT
     
