feat: add version output to versioning action for improved version retrieval

--- a/common/versioning/action.yml
+++ b/common/versioning/action.yml
@@ -5,6 +5,9 @@ inputs:
     description: 'Version file'
     required: false
     default: 'version.json'
+outputs:
+  version:
+    description: 'Version'
 runs:
   using: 'composite'
   steps:
