--- a/common/versioning/action.yml
+++ b/common/versioning/action.yml
@@ -17,13 +17,8 @@ runs:
       run: |
         echo "version=$(jq -r .version ${{ inputs.version_file }})-${{ github.run_number }}" >> $GITHUB_OUTPUT
     - name: Get feature version
-      if: startsWith(github.ref, 'refs/heads/feature/')
+      if: github.ref != 'refs/heads/main' && github.event_name != 'pull_request'
       shell: bash
       run: |
-        echo "version=FEA.${{ github.run_number }}" >> $GITHUB_OUTPUT
-    - name: Get bugfix version
-      if: startsWith(github.ref, 'refs/heads/bugfix/')
-      shell: bash
-      run: |
-        echo "version=BUG.${{ github.run_number }}" >> $GITHUB_OUTPUT
+        echo "version=DEV.${{ github.run_number }}" >> $GITHUB_OUTPUT
     
