fix: correctly interpolate hosts input in args_string for run-playbook action

--- a/ansible/run-playbook/action.yml
+++ b/ansible/run-playbook/action.yml
@@ -47,7 +47,7 @@ runs:
           args_string="$args_string -t ${{ inputs.tags }}"
         fi
         if [ -n "${{ inputs.hosts }}" ]; then
-          args_string="$args_string -l {{ inputs.hosts }}"
+          args_string="$args_string -l ${{ inputs.hosts }}"
         fi
         if [ -n "${{ inputs.vars }}" ]; then
           IFS=' ' read -r -a vars <<< "${{ inputs.vars }}"
