--- a/common/versioning/action.yml
+++ b/common/versioning/action.yml
@@ -9,12 +9,12 @@ runs:
   using: 'composite'
   steps:
     - name: Get release version
-      if: github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && github.base_ref == 'refs/heads/main')
+      if: github.ref == 'refs/heads/main' || github.event.pull_request || github.event_name == 'schedule'
       shell: bash
       run: |
         echo "IMAGE_VERSION=$(jq -r .version ${{ inputs.version_file }})-${{ github.run_number }}" >> $GITHUB_ENV
     - name: Get feature version
-      if: github.ref != 'refs/heads/main' && github.event_name != 'pull_request'
+      if: github.ref != 'refs/heads/main' && github.event_name != 'schedule' && !github.event.pull_request
       shell: bash
       run: |
         echo "IMAGE_VERSION=DEV.${{ github.run_number }}" >> $GITHUB_ENV
