fix: correct HTTP proxy build argument syntax in action.yml

--- a/docker/build-and-push/action.yml
+++ b/docker/build-and-push/action.yml
@@ -62,7 +62,7 @@ runs:
         docker build \
           --tag ${{ inputs.repository }}:${{ inputs.tag }} \
           --file ${{ inputs.dockerfile }} \
-          --build-arg HTTP_PROXY:${{ inputs.http_proxy }} \
+          --build-arg HTTP_PROXY=${{ inputs.http_proxy }} \
           ${{ inputs.build_args }} \
           $no_cache \
           .
