fix: use input variables for proxy build arguments in action.yml

--- a/docker/build-and-push/action.yml
+++ b/docker/build-and-push/action.yml
@@ -56,9 +56,9 @@ runs:
         cd ${{ inputs.build_dir }}
 
         docker build \
-          --build-arg HTTP_PROXY=http://10.25.206.0:80 \
-          --build-arg HTTPS_PROXY=http://10.25.206.0:80 \
-          --build-arg NO_PROXY=10.0.0.0/8,127.0.0.1,localhost \
+          --build-arg HTTP_PROXY=$HTTP_PROXY \
+          --build-arg HTTPS_PROXY=$HTTPS_PROXY \
+          --build-arg NO_PROXY=$NO_PROXY \
           --tag ${{ inputs.repository }}:${{ inputs.tag }} \
           --file ${{ inputs.dockerfile }} \
           ${{ inputs.build_args }} \
