Fix formatting of ansible-playbook command

--- a/ansible/run-playbook/action.yml
+++ b/ansible/run-playbook/action.yml
@@ -62,7 +62,7 @@ runs:
         echo "additional args: $args_string"
 
         ansible-playbook \
-          -i inventory/hosts.yml
+          -i inventory/hosts.yml \
           -i ${{ inputs.inventory_path }} \
           ${{ inputs.debug_level }} $args_string \
           playbook ${{ inputs.playbook_path }}
